--- a/test.ipynb
+++ b/test.ipynb
@@ -123,28 +123,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_path = (\n",
-    "    \"../../docs/integrations/document_loaders/example_data/layout-parser-paper.pdf\"\n",
+    "    \"../data/AI_and_Technology_Knowledge_Base.pdf\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "\n",
+    "loader = PyPDFLoader(file_path)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "docs = loader.load()"
+   ]
   },
   {
    "cell_type": "code",
